# keybridgeBT

./: .gitignore  LICENSE  README.md  requirements-test.txt
builds/: README.md
builds/mac/: build.sh
builds/win/: build.ps1
docs/: ARCHITECTURE-v2.md  ARCHITECTURE.md  RUNNING.md  TASKS-v2.md  TASKS.md
mac-sender/: build_app.sh  com.keybridgebt.sender.plist  config.yaml  install.sh  pyproject.toml  requirements.txt
mac-sender/keybridgebt_mac/: __init__.py  __main__.py  bt_server.py  crypto.py  hid_reader.py  keyboard_tap.py  keychain.py  main.py  menubar.py  packet.py  setup_wizard.py  tcp_server.py  toggle.py  trackpad_reader.py
tests/: conftest.py  test_pipeline_reconnect.py  test_protocol_crypto.py  test_session_security.py  test_tcp_transport.py
win-receiver/: config.yaml  pyproject.toml  requirements.txt
win-receiver/keybridgebt_win/: __init__.py  __main__.py  bt_client.py  credential_store.py  crypto.py  key_injector.py  keycode_map.py  main.py  mouse_injector.py  packet.py  rate_limiter.py  setup_wizard.py  tcp_client.py  tray.py
