[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "keybridgebt-win"
version = "0.1.0"
description = "keybridgeBT Windows receiver — forward Mac keyboard/trackpad over Bluetooth"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "PyNaCl>=1.5.0",
    "keyring>=25.0",
    "pystray>=0.19",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["keybridgebt_win*"]
