[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "keybridgebt-win"
version = "2.0.0"
description = "keybridgeBT Windows receiver — forward Mac keyboard/trackpad over Wi-Fi TCP"
requires-python = ">=3.11"
dependencies = [
    "PyNaCl>=1.5.0",
    "keyring>=25.0",
    "pystray>=0.19",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["keybridgebt_win*"]
